--- a/TerrariaDedicatedServerGUI.csproj
+++ b/TerrariaDedicatedServerGUI.csproj
@@ -62,9 +62,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cls\Config.cs" />
-    <Compile Include="cls\Controller.cs" />
+    <Compile Include="cls\IOClass\Config.cs" />
+    <Compile Include="cls\ServerClass\Controller.cs" />
     <Compile Include="cls\UIClass\DoubleBuffer.cs" />
+    <Compile Include="cls\WebClass\GetIpAdress.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +120,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
